@@ -1,3 +1,7 @@
+2003-11-18  Werner Koch  <wk@gnupg.org>
+
+	* reader.c (ksba_reader_read): Return GPG_ERR_EOF and not -1.
+
 2003-11-17  Werner Koch  <wk@gnupg.org>
 
 	* cert.c (get_name, ksba_cert_get_extension): Return GPG_ERR_EOF
